<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/im_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_save"
        android:title="@string/salva">
    <menu>
    <item
            android:id="@id/im_save_normaly"
            app:showAsAction="ifRoom"
            android:title="@string/salva"/>
        <item
            android:id="@id/im_save_as"
            app:showAsAction="ifRoom"
            android:title="@string/save_as"/>
    </menu>
    </item>

    <item
            android:id="@id/im_undo"
        app:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_undo"
            android:title="@string/testo_indietro"
            />
    <item
            android:id="@id/im_redo"
        app:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_redo"
            android:title="@string/testo_rifai"
            />
    <item
        android:id="@id/im_search"
        app:showAsAction="never"
        android:title="@string/find"
        />
<!--    <item-->
<!--        android:id="@id/im_rename"-->
<!--        app:showAsAction="never"-->
<!--        android:title="@string/rinomina"-->
<!--        />-->
    <item
        android:id="@id/im_goto_line"
        app:showAsAction="never"
        android:title="@string/goto_line"
        />
<!--    <item-->
<!--        android:id="@id/im_view_it_on_browser"-->
<!--        app:showAsAction="never"-->
<!--        android:title="@string/view_it_on_the_web"-->
<!--        />-->
<!--    <item-->
<!--        android:id="@id/im_view_markdown"-->
<!--        app:showAsAction="never"-->
<!--        android:title="@string/view_markdown_result"-->
<!--        />-->
    <item
        android:id="@id/im_share"
        app:showAsAction="never"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        />
    <item
        android:id="@id/im_info"
        app:showAsAction="never"
        android:title="@string/info"
        />
</menu>
