<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/im_select_folder"
        android:title="@string/seleziona"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/im_add_file_or_folder"
        android:icon="@drawable/ic_add_file_or_folder"
        android:title="@string/add_file_or_folder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/im_set_as_working_folder"
        android:icon="@drawable/ic_action_bookmark_outline"
        android:title="@string/set_as_working_folder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/im_is_working_folder"
        android:icon="@drawable/ic_action_bookmark"
        android:title="@string/is_the_working_folder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/im_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/find"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
