<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/my_search_view"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search">
    </item>-->
    <item
        android:id="@id/im_cancel"
        app:showAsAction="always"
        android:title="@android:string/cancel">
    </item>

    <item
        android:id="@id/im_previous_item"
        app:showAsAction="ifRoom"
        android:title="@string/previous">
    </item>
    <item
        android:id="@id/im_next_item"
        app:showAsAction="always"
        android:title="@string/next">
    </item>
    <item
        android:id="@id/im_replace"
        app:showAsAction="always"
        android:title="@string/replace">
    </item>
    <item
        android:id="@id/im_replace_all"
        app:showAsAction="ifRoom"
        android:title="@string/replace_all">
    </item>
    <!--<item
        android:id="@id/im_cancel"
        android:icon="@drawable/ic_action_close"
        android:title="@app:tring/cancel"
        app:showAsAction="always">
    </item>-->
</menu>
