<?xml version="1.0" encoding="utf-8"?>

<shared.turboeditor.views.CustomDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/no_file_opened_messagge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/open_a_file"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="@dimen/text_size_mega_title" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:id="@id/text_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <shared.turboeditor.views.GoodScrollView
                android:id="@id/vertical_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fillViewport="true"
                android:scrollbars="vertical">

                <HorizontalScrollView
                    android:id="@id/horizontal_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fillViewport="true"
                    android:scrollbars="horizontal">

                    <view
                        android:id="@id/editor"
                        class="shared.turboeditor.home.Editor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:bufferType="spannable"
                        android:cursorVisible="true"
                        android:gravity="top|start"
                        android:singleLine="false"
                        android:text=""
                        android:textCursorDrawable="@null"
                        android:textIsSelectable="true" />
                </HorizontalScrollView>
            </shared.turboeditor.views.GoodScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="66dp"
                android:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="66dp"
                android:visibility="invisible" />


            <HorizontalScrollView
                android:id="@+id/parent_accessory_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:fillViewport="false"
                android:scrollbars="horizontal">

                <shared.turboeditor.util.AccessoryView
                    android:id="@+id/accessoryView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"></shared.turboeditor.util.AccessoryView>
            </HorizontalScrollView>
        </FrameLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@id/drawer_files"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/navigation_drawer_background_inverted">

        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/drawer_buttons"
            android:background="@null"
            android:cacheColorHint="@android:color/transparent"
            android:choiceMode="singleChoice"
            android:divider="@color/divider"
            android:fadingEdge="none"
            android:listSelector="?selectableItemBackground" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/drawer_buttons"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/recent_files"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="@dimen/text_size_mega_title" />


        <LinearLayout
            android:id="@id/drawer_buttons"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_dimension"
                android:background="@color/divider_inverted" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="CreateFile"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/new_file"
                android:textColor="@color/navigation_drawer_button_text_color_inverted"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="OpenFile"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/open_a_file"
                android:textColor="@color/navigation_drawer_button_text_color_inverted"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>


</shared.turboeditor.views.CustomDrawerLayout>
